--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -15,7 +15,10 @@ a {
 
 body {
   font-family: monospace;
+  font-size: 1.4rem;
   background: #add5fa;
+  /* background: #f9a59a; */
+  color: #f5f5f5;
 }
 
 /*===== Global =====*/
@@ -69,11 +72,23 @@ body {
   padding: 1rem;
 }
 
-.window-content span {
-  color: #ffffff;
-  font-size: 1.5rem;
+/*===== Colors =====*/
+.main-color {
+  color: #d55fde;
 }
 
-.function-name {
-  color: gold !important;
+.reserved-color {
+  color: #d6a25b;
+}
+
+.reserved-second-color {
+  color: #c46f40;
+}
+
+.function-color {
+  color: #61afef;
+}
+
+.function-typing-color {
+  color: #ffd700 !important;
 }
